--- a/client/app/elements/elements.html
+++ b/client/app/elements/elements.html
@@ -10,9 +10,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 <!-- Iron elements -->
 <link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-icons/social-icons.html">
+<link rel="import" href="../bower_components/iron-icons/hardware-icons.html">
+<link rel="import" href="../bower_components/iron-image/iron-image.html">
 
 <!-- Paper elements -->
 <link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
@@ -24,6 +28,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-styles/typography.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../bower_components/paper-badge/paper-badge.html">
+
+<link rel="import" href="../bower_components/neon-animation/neon-animations.html">
 
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
@@ -37,8 +47,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!-- Add your elements here -->
 <link rel="import" href="../styles/app-theme.html">
 <link rel="import" href="../styles/shared-styles.html">
-<link rel="import" href="my-list/my-list.html">
 <link rel="import" href="page-home/page-home.html">
 <link rel="import" href="page-users/page-users.html">
 <link rel="import" href="page-contact/page-contact.html">
 <link rel="import" href="page-userinfo/page-userinfo.html">
+<link rel="import" href="product-item/product-item.html">
+<link rel="import" href="product-list/product-list.html">
