--- a/client/app/elements/page-home/page-home.html
+++ b/client/app/elements/page-home/page-home.html
@@ -1,13 +1,3 @@
-<!--
-@license
-Copyright (c) 2015 The Polymer Project Authors. All rights reserved.
-This code may only be used under the BSD style license found at http://polymer.github.io/LICENSE.txt
-The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
-The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
-Code distributed by Google as part of the polymer project is also
-subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 
 <dom-module id="page-home">
@@ -17,15 +7,24 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       :host {
         display: block;
       }
+      h1 {
+        font-family: "Montserrat", Helvetica, Arial, sans-serif;
+        font-size: 24px;
+        font-weight: 700;
+        text-transform: uppercase;
+      }
     </style>
-    <div>
-      <paper-material elevation="1">
-        <p class="subhead">You now have:</p>
-        <my-list></my-list>
-
-        <p>Looking for more Web App layouts? Check out our <a href="https://github.com/PolymerElements/app-layout-templates">layouts</a> collection. You can also <a href="http://polymerelements.github.io/app-layout-templates/">preview</a> them live.</p>
-      </paper-material>
+    <div class="centered-container">
+      <h1>Most Downloaded Wordpress Themes</h1>
+      <product-list products="{{products}}">
+      </product-list>
     </div>
+    <iron-ajax auto
+      url="/api/product"
+      handle-as="json"
+      debounce-duration="300"
+      on-response="_remoteProductsLoaded">
+    </iron-ajax>
   </template>
   <script>
   (function() {
@@ -35,12 +34,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       is: 'page-home',
 
       properties: {
-        foo: {
-          type: String,
-          value: 'page-home',
-          notify: true
-        }
-      }
+        products: Array,
+        _remoteProductsLoaded: {
+          value: false
+        },
+      },
+
+      _remoteProductsLoaded: function(request) {
+        this._remoteProductsLoaded = true;
+        console.log('remote products loaded');
+        this.products = request.detail.response;
+      },
     });
   })();
   </script>
