--- a/client/app/styles/app-theme.html
+++ b/client/app/styles/app-theme.html
@@ -19,12 +19,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --secondary-text-color: #737373;
     --disabled-text-color: #9b9b9b;
     --divider-color: #dbdbdb;
-    --primary-color: #3f51b5;
-    --light-primary-color: #c5cae9;
-    --dark-primary-color: #303f9f;
-    --accent-color: #ff4081;
-    --light-accent-color: #ff80ab;
-    --dark-accent-color: #f50057;
+    --primary-color: #303F9F;
+    --light-primary-color: #707BC4;
+    --dark-primary-color: #0E1A69;
+    --accent-color: #FF6B9D;
+    --light-accent-color: #FF9EBF;
+    --dark-accent-color: #FF4081;
 
     /* Components */
 
