--- a/client/app/test/product-item-basic.html
+++ b/client/app/test/product-item-basic.html
@@ -12,39 +12,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <html>
 <head>
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
-  <title>my-greeting-basic</title>
+  <title>product-item</title>
 
-  <script src="../bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
   <script src="../bower_components/web-component-tester/browser.js"></script>
 
-  <!-- Import the element to test -->
-  <link rel="import" href="../elements/my-greeting/my-greeting.html">
+  <!-- Step 1: import the element to test -->
+  <link rel="import" href="../elements/product-item/product-item.html">
 
 </head>
 <body>
 
-  <test-fixture id="basic">
-    <template>
-      <my-greeting></my-greeting>
-    </template>
-  </test-fixture>
+<test-fixture id="basic">
+  <template>
+    <product-item></product-item>
+  </template>
+</test-fixture>
 
-  <script>
+<script>
+  describe('product-item tests', function() {
+    var element;
 
-    suite('my-greeting tests', function() {
-      var greeting, header;
+    before(function() {
+      element = fixture('basic');
+    });
 
-      setup(function() {
-        greeting = fixture('basic');
-      });
-
-      test('Welcome!', function() {
-        header = greeting.$$('h2');
-        assert.equal(header.textContent, 'Welcome!');
-      });
+    it('', function() {
 
     });
-  </script>
+
+  });
+</script>
 
 </body>
 </html>
