--- a/public/elements/elements.html
+++ b/public/elements/elements.html
@@ -20509,6 +20509,10 @@ module.exports = Array.isArray || function (arr) {
       .product-image {
         --iron-image-width: 255px;
       }
+      .product-image-full {
+        width: 95%;
+        --iron-image-width: 100%;
+      }
       .price-badge {
         --paper-badge-width: 40px;
         --paper-badge-height: 40px;
@@ -20557,26 +20561,28 @@ module.exports = Array.isArray || function (arr) {
     </paper-card>
 
     <paper-dialog id="dialog">
-      <h3>[[product.title]]</h3>
-      <iron-image class="product-image-full" src="[[product.featureimg]]" on-tap="_toggleDialog" alt="[[product.title]]">
-      </iron-image>
-      <div>
-        <h4>$[[product.cost]]</h4>
-      </div>
-      <div class="horizontal centered-container wrap">
-        <span class="container">
-          <a href="[[product.previewlink]]" target="_blank">
-            <paper-icon-button icon="icons:visibility"></paper-icon-button>
-            <div>preview</div>
-          </a>
-        </span>
-        <span class="container">
-          <a href="[[product.link]]" target="_blank">
-            <paper-icon-button icon="icons:get-app"></paper-icon-button>
-            <div>download</div>
-          </a>
-        </span>
-      </div>
+        <h3>[[product.title]]</h3>
+        <paper-card>
+          <iron-image class="product-image-full" src="[[product.featureimg]]" on-tap="_toggleDialog" alt="[[product.title]]">
+          </iron-image>
+        </paper-card>
+        <div>
+          <h4>$[[product.cost]]</h4>
+        </div>
+        <div class="horizontal centered-container wrap">
+          <span class="container">
+            <a href="[[product.previewlink]]" target="_blank">
+              <paper-icon-button icon="icons:visibility"></paper-icon-button>
+              <div>preview</div>
+            </a>
+          </span>
+          <span class="container">
+            <a href="[[product.link]]" target="_blank">
+              <paper-icon-button icon="icons:get-app"></paper-icon-button>
+              <div>download</div>
+            </a>
+          </span>
+        </div>
     </paper-dialog>
   </template>
   <script>
